# ImagesAnnotator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
src/CURL/tests/unit/CURLController/: CMakeLists.txt  UTEST_CURLController.cpp
src/annotator-business/: AnnotatorController.cpp  AnnotatorController.h  AnnotatorTypeAliases.h  CMakeLists.txt
src/annotator-business/dbs/: AnnotationsDirDB.cpp  CMakeLists.txt  ImagesDirDB.cpp  ImagesDirDB.h
src/annotator-business/dbs/AnnotationsDBs/: AnnotationsDBTypes.h  AnnotationsDirDB.cpp  AnnotationsDirDB.h  AnnotationsJSONSerializator.cpp  AnnotationsJSONSerializator.h  CMakeLists.txt
src/annotator-business/dbs/AnnotationsDBs/converters/: CMakeLists.txt  ConvertersAliases.h  ImageRecordJSON2RecordConverter.cpp  ImageRecordJSON2RecordConverter.h  ImageRecordRectJSON2RecordConverter.cpp  ImageRecordRectJSON2RecordConverter.h  ImageRecords2JSONConverter.cpp  ImageRecords2JSONConverter.h  JSON2ImageRecordsConverter.cpp  JSON2ImageRecordsConverter.h
src/annotator-business/dbs/AnnotationsDBs/mergers/: CMakeLists.txt  DefaultDBMerger.cpp  DefaultDBMerger.h
src/annotator-business/dbs/ImagesDBs/: CMakeLists.txt  ImagesDirDB.cpp  ImagesDirDB.h
src/annotator-business/dbs/ImagesLoaders/: CMakeLists.txt  IImagesLoader.h  ImagesDirLoader.cpp  ImagesDirLoader.h  ImagesWebPageLoader.cpp  ImagesWebPageLoader.h
src/annotator-business/exporters/: CMakeLists.txt  ExportContext.h  IExporter.h  PlainTxt2FolderExporter.cpp  PlainTxt2FolderExporter.h  PyTorchVisionFolderExporter.cpp  PyTorchVisionFolderExporter.h  Yolo42FolderExporter.cpp  Yolo42FolderExporter.h
src/annotator-business/tests/: CMakeLists.txt
src/annotator-business/tests/component/: CMakeLists.txt  ctests_decls.h.cmake.in
src/annotator-business/tests/component/AnnotatorController/: CMakeLists.txt  CTEST_AnnotatorController.cpp  CTEST_AnnotatorController.h
src/annotator-business/tests/unit/: CMakeLists.txt
src/annotator-business/tests/unit/AnnotationsJSONSerializator/: CMakeLists.txt  UTEST_AnnotationsJSONSerializator.cpp
src/annotator-business/tests/unit/ImagesWebPageLoader/: CMakeLists.txt  UTEST_ImagesWebPageLoader.cpp
src/annotator-business/tests/unit/converters/: CMakeLists.txt
src/annotator-business/tests/unit/exporters/: CMakeLists.txt
src/annotator-business/tests/unit/mergers/: CMakeLists.txt
src/annotator-events/: CMakeLists.txt  IImagesAnnotatorEventController.h  ImagesAnnotatorEventController.cpp  ImagesAnnotatorEventController.h
src/annotator-events/events/: AnnotationsDirChanged.cpp  AnnotationsDirChanged.h  AnnotationsDirChangedIHandler.h  CMakeLists.txt  CloseCurrentProject.h  CloseCurrentProjectHandler.h  CurrentImageChanged.cpp  CurrentImageChanged.h  CurrentImageChangedHandler.h  DeleteCurrentImageRequest.cpp  DeleteCurrentImageRequest.h  DeleteCurrentImageRequestHandler.h  DisplayErrorEvent.cpp  DisplayErrorEvent.h  DisplayErrorEventHandler.h  EventIHandler.h  EventsFactory.cpp  EventsFactory.h  Export2PyTorchVisionRequest.cpp  Export2PyTorchVisionRequest.h  Export2PyTorchVisionRequestHandler.h  ExportPlainTxt2FolderRequest.cpp  ExportPlainTxt2FolderRequest.h  ExportPlainTxt2FolderRequestHandler.h  ExportYolo4FolderRequest.cpp  ExportYolo4FolderRequest.h  ExportYolo4FolderRequestHandler.h  IEvent.h  IImageCropperFacilityProvider.h  IProvider.h  IRecord.h  IRequestEvent.h  ImageRecord.cpp  ImageRecord.h  ImageRecordRect.cpp  ImageRecordRect.h  ImagesDirChanged.cpp  ImagesDirChanged.h  ImagesDirChangedIHandler.h  ImagesDirProviderChanged.cpp  (+11 more)
src/annotator-events/tests/unit/: CMakeLists.txt
src/annotator-events/tests/unit/AnnotationsDirChanged/: CMakeLists.txt  UTEST_AnnotationsDirChanged.cpp
src/annotator-events/tests/unit/CurrentImageChanged/: CMakeLists.txt  UTEST_CurrentImageChanged.cpp
src/annotator-events/tests/unit/DeleteCurrentImageRequest/: CMakeLists.txt  UTEST_DeleteCurrentImageRequest.cpp
src/annotator-events/tests/unit/DisplayErrorEvent/: CMakeLists.txt  UTEST_DisplayErrorEvent.cpp
src/annotator-events/tests/unit/EventsFactory/: CMakeLists.txt  UTEST_EventsFactory.cpp
src/annotator-events/tests/unit/Export2PyTorchVisionRequest/: CMakeLists.txt  UTEST_Export2PyTorchVisionRequest.cpp
src/annotator-events/tests/unit/ExportPlainTxt2FolderRequest/: CMakeLists.txt  UTEST_ExportPlainTxt2FolderRequest.cpp
src/gtkmm3/helpers/: CMakeLists.txt  GtkmmImageCropperProvider.cpp  GtkmmImageCropperProvider.h
src/gtkmm3/main-window/: CMakeLists.txt  WindowDataContext.cpp  WindowDataContext.h  WindowEventsHandler.cpp  WindowEventsHandler.h  WindowLoader.cpp  WindowLoader.h
src/gtkmm3/main-window/custom-widgets/: AllAnnotationsLabel.cpp  AllAnnotationsLabel.h  CMakeLists.txt  CentralWorkingCanvas.cpp  CentralWorkingCanvas.h  CustomWidgetsFactory.cpp  CustomWidgetsFactory.h  ImagePathLabel.cpp  ImagePathLabel.h  ImageRectsLabel.cpp  ImageRectsLabel.h
src/gtkmm3/main-window/event-handlers/: AboutEventsHandler.cpp  AboutEventsHandler.h  AbstractWindowEventHandler.cpp  AbstractWindowEventHandler.h  AnnotationsEventsHandler.cpp  AnnotationsEventsHandler.h  CMakeLists.txt  ExportEventsHandler.cpp  ExportEventsHandler.h  ImageListEventsHandler.cpp  ImageListEventsHandler.h  ImageNavigationEventsHandler.cpp  ImageNavigationEventsHandler.h  KeyboardEventsHandler.cpp  KeyboardEventsHandler.h  MouseDrawEventsHandler.cpp  MouseDrawEventsHandler.h  ProjectFileEventsHandler.cpp  ProjectFileEventsHandler.h  WebPageEventsHandler.cpp  WebPageEventsHandler.h  WindowEventHandlersFactory.cpp  WindowEventHandlersFactory.h  WindowOps.cpp  WindowOps.h  WindowSystemEventsHandler.cpp  WindowSystemEventsHandler.h  ZoomEventsHandler.cpp  ZoomEventsHandler.h
src/gtkmm3/tests/: CMakeLists.txt
src/gtkmm3/tests/component/: CMakeLists.txt  GtkInitFixture.h
src/gtkmm3/tests/unit/: CMakeLists.txt
src/gtkmm3/window/: CMakeLists.txt  WindowDataContext.cpp  WindowDataContext.h  WindowLoader.cpp  WindowLoader.h
src/gtkmm3/window/custom-widgets/: CMakeLists.txt  CustomWidgetsFactory.cpp  CustomWidgetsFactory.h  ImagePathLabel.cpp  ImagePathLabel.h
(+182 files in other folders)
