cmake_minimum_required(VERSION 3.13)

# disabling the asserts for the tests
add_compile_options(-DNDEBUG=1)

add_subdirectory(ImageRecordRect)
add_subdirectory(ImageRecord)
add_subdirectory(EventsFactory)
add_subdirectory(AnnotationsDirChanged)
add_subdirectory(ImagesDirChanged)
add_subdirectory(StoreRequest)
add_subdirectory(ExportPlainTxt2FolderRequest)
add_subdirectory(ExportYolo4FolderRequest)
add_subdirectory(Export2PyTorchVisionRequest)
add_subdirectory(DeleteCurrentImageRequest)
add_subdirectory(LoadImagesFromWebPage)
add_subdirectory(DisplayErrorEvent)
add_subdirectory(CurrentImageChanged)
add_subdirectory(ImagesDirProviderChanged)
